Fix MObile Overflow

--- a/cssFile/general.css
+++ b/cssFile/general.css
@@ -167,4 +167,7 @@ body{
 @media (max-width: 450px){
     .title-container{
         font-size: 30px;}
+    html, body {
+        overflow-x:hidden 
+    } 
 }
