--- a/cssFile/navbar.css
+++ b/cssFile/navbar.css
@@ -49,53 +49,42 @@
 
 @media (max-width: 450px){
     .navbar{
-        grid-template-columns: 650px 1fr;
+        position: fixed;
+        z-index: 10;
+        width: 300px;
+        display: grid;
+        grid-template-columns: 100px 1fr;
         color: white;
-        font-size: 18px;
-        padding: 30px 0 0 50px;
+        font-size: 9px;
+        padding: 30px 0 0 30px;
     }
     
     .nav-title{
-        padding: 0;
-        font-size: 12px;
+        padding-left: 0px;
+        font-size: 14px;
         padding-top: 2px;
+        cursor: default;
     }
     
     .nav-content{
-        margin-right: 50px;
-        gap: 80px;
+        margin-right: 0px;
+        margin-left: 30px;
+        gap: 26px;
+        position: relative;
+        justify-content: end;
     }
     
     .nav-content div{
-        line-height: 40px;
+        text-align: center;
+        line-height: 23px;
         float: right;
-        height: 45px;
-        --c:linear-gradient(white 0 0); /* update the color here */
-        padding-bottom: .15em;
-        background: var(--c), var(--c);
-        background-size: .3em .1em;
-        background-position:50% 100%;
-        background-repeat: no-repeat;
-        transition: .1s linear, background-size .1s .1s linear;
+        height: 25px;
+        cursor: pointer;
+        justify-self: end;
     }
     
     .nav-content div:hover, .nav-content div:focus{
         background-size: 40% .1em;
         background-position: 10% 100%, 90% 100%;
-    }
-}
-
-@media (max-width: 450px){
-    .navbar{
-        max-width: 300px;
-    }
-
-    html{
-        overflow-x: hidden scroll;
-    }
-
-    body {
-        width: auto!important; 
-        overflow-x: hidden!important
     }
 }
